Bug 479959 - Reimplement text/plain loading using the HTML5 parser. r=Olli.Pettay.