layout/build/nsContentDLF.cpp
@@ -87,7 +87,8 @@ nsresult
 NS_NewContentViewer(nsIContentViewer** aResult);
 
 // XXXbz if you change the MIME types here, be sure to update
-// nsIParser.h and DetermineParseMode in nsParser.cpp accordingly.
+// nsIParser.h and DetermineParseMode in nsParser.cpp and
+// nsHTMLDocument::StartDocumentLoad accordingly.
 static const char* const gHTMLTypes[] = {
   TEXT_HTML,
   TEXT_PLAIN,
