parser/html/nsHtml5TokenizerCppSupplement.h
@@ -36,6 +36,12 @@
  * ***** END LICENSE BLOCK ***** */
 
 void
+nsHtml5Tokenizer::StartPlainText()
+{
+  stateSave = NS_HTML5TOKENIZER_PLAINTEXT;
+}
+
+void
 nsHtml5Tokenizer::EnableViewSource(nsHtml5Highlighter* aHighlighter)
 {
   mViewSource = aHighlighter;
